apps/ttb-receipt/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttb-receipt-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: ttb-receipt-tls
      hosts:
        - ttbreceipt.picturo.us
  rules:
    - host: ttbreceipt.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ttb-receipt-backend
                port:
                  number: 3000
